add_library(libdns SHARED membuf.c dns.c parse.c write.c rrl.c)
default_compile_options(libdns TRUE)
define_file_logname_for_target(libdns)
target_link_libraries(libdns PUBLIC url duv kvpsync)
# just libdns.so, not liblibdns.so
set_target_properties(libdns PROPERTIES PREFIX "")

add_executable(dns main.c)
default_compile_options(dns TRUE)
define_file_logname_for_target(dns)
target_link_libraries(dns PUBLIC libdns)

if("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU")
    source_compile_options(parse.c "-Wno-conversion")
    source_compile_options(write.c "-Wno-conversion")
elseif("${CMAKE_C_COMPILER_ID}" MATCHES "Clang")
elseif("${CMAKE_C_COMPILER_ID}" STREQUAL "MSVC")
endif()

if(BUILD_TESTS)
    add_executable(test_parse test_parse.c)
    target_link_libraries(test_parse PUBLIC libdns)
    default_compile_options(test_parse TRUE)
    define_file_logname_for_target(test_parse)
    add_test(NAME "do_test_parse" COMMAND "./test_parse")

    add_executable(test_write test_write.c)
    target_link_libraries(test_write PUBLIC libdns)
    default_compile_options(test_write TRUE)
    define_file_logname_for_target(test_write)
    add_test(NAME "do_test_write" COMMAND "./test_write")

    add_executable(test_dns test_dns.c)
    target_link_libraries(test_dns PUBLIC libdns)
    default_compile_options(test_dns TRUE)
    define_file_logname_for_target(test_dns)
    add_test(NAME "do_test_dns" COMMAND "./test_dns")

    add_executable(test_rrl test_rrl.c)
    target_link_libraries(test_rrl PUBLIC libdns)
    default_compile_options(test_rrl TRUE)
    define_file_logname_for_target(test_rrl)
    add_test(NAME "do_test_rrl" COMMAND "./test_rrl")

    add_executable(test_main test_main.c)
    target_link_libraries(test_main PUBLIC libdns)
    default_compile_options(test_main TRUE)
    define_file_logname_for_target(test_main)
    add_test(NAME "do_test_main" COMMAND "./test_main")
endif()
