if("${DOVECOT_INCLUDE_DIR}" STREQUAL "")
    set(DOVECOT_INCLUDE_DIR "/usr/include/dovecot")
endif()
add_library(xkey SHARED xkey.c xkeysync.c xkeyadd.c)
target_include_directories(xkey PRIVATE ${DOVECOT_INCLUDE_DIR})
define_file_logname_for_target(xkey)
set_target_properties("xkey" PROPERTIES OUTPUT_NAME "99_xkey_plugin")
default_compile_options(xkey FALSE)
target_link_libraries(xkey PRIVATE libsmsql_noasan badbadbad_alert_noasan dstr_noasan)
